src/app/container/jobs/jobslist/jobslist.component.css
.toggle-map-btn{
    /* right: 20px;
    position: relative; */
    margin-right: 20px; 
}

section{
    height: 100vh;
}

.jobs-actionbar{
    display: flex;
    align-items: center;
    justify-content: flex-end;
    height: 60px;
    background: rgb(255, 255, 255);
    width: 100%;
    border-radius: 8px;
    box-shadow: 0 6px 3px 0 rgba(74,74,74,.06);
}



.wrapper{
    margin: 0 8px 0px 8px;
}

.showmap{
    width: 30px;
    padding:3px;
}

job{
    width: 96%;
    margin-top: 20px;
}
app-filter{
    width: 96%;
    margin-top: 20px;
}

.pagination{
    display: flex;
    justify-content: center;

}
.toggle_map{
 display: flex;
 justify-content: flex-end;
 padding-right: 5%;
 padding-bottom: 2%;
 color:#4A4A4A;
}
.big-card{
    width: 100%;
    display: flex;
    justify-content: center;
}
@media screen and (max-width: 1025px){
    button{
        margin-bottom:100px;
    }
.action_bar{
       
    display: flex;
    padding: 2px;
    padding-bottom: 2px;
    justify-content: space-around;
    position: fixed;
    bottom:40px;
    height: 40px;
    width: 100%;
    border-top: 1px solid rgba(38, 41, 58, 0.1);
    background: white;
    
}
.hide{
    display: none;
}
.show{
    display: block;
}
.toggle_map{
    display:none;
}
/* #showmap{

    position: fixed;
    bottom:80px;
    right:70px;
    z-index:999;
} */
.jobs_map_grid{
    margin-bottom:60px;
}
}

.map{
    border-radius: 10px;

}
@media screen and (min-width: 1025px){
 

    .action_bar{
        /* display: none; */
    }
    .showmap{
        display: none;
    }
    agm-map{
        display: block;
      
    }
    
   
    .job_cards_grid2{
        width: 100%;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-gap: 10px;
        margin: 0 auto;

    }
    .jobs_map_grid{
        margin-left: 15px;
        margin-right: 15px;
        display: grid;
        grid-template-columns:3fr 2fr;
        grid-gap: 20px;
    }
    .jobs_map_grid > div {
        /* max-width: 600px; */
        max-height: 200px;
    }

  
    
}

